--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h4 align="center">“Your pet’s happy place”</h4>
 
 <p align="center">
-<a href="Index.html"> Home </a>&nbsp;
+<a href="index.html"> Home </a>&nbsp;
 <a href="Products.html"> Products </a>&nbsp;
 <a href="AboutUs.html"> About Us </a>&nbsp;
 <a href="ContactUs.html"> Contact Us </a>&nbsp;
